<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddFeedActivity">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_feed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            app:layout_constraintStart_toStartOf="parent"

            android:hint="@string/title"
            app:hintEnabled="true"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/url"
            app:hintEnabled="true"
            app:hintTextAppearance="@android:style/TextAppearance.Medium"

            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/til_feed_title"
            android:id="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

</android.support.constraint.ConstraintLayout>